add styles boostrap

--- a/src/app/lista-empleados/lista-empleados.component.html
+++ b/src/app/lista-empleados/lista-empleados.component.html
@@ -1,4 +1,6 @@
-<table>
+<div class="container">
+  <h2>Lista de Empleados</h2>
+  <table class="table">
     <thead>
       <tr>
         <th>Nombre</th>
@@ -14,3 +16,4 @@
       </tr>
     </tbody>
   </table>
+</div>
