--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,20 @@
-<h2>Agregar Empleado</h2>
-<form [formGroup]="empleadoForm"  (ngSubmit)="agregarEmpleado()">
-  <label>Nombre: <input type="text" formControlName="nombre"></label><br>
-  <label>Apellido: <input type="text" formControlName="apellido"></label><br>
-  <label>Teléfono: <input type="text" formControlName="telefono"></label><br>
-  <button type="submit">Agregar Empleado</button>
-</form>
+<div class="container">
+  <h2>Agregar Empleado</h2>
+  <form [formGroup]="empleadoForm" (ngSubmit)="agregarEmpleado()">
+    <div class="form-group">
+      <label>Nombre:</label>
+      <input type="text" class="form-control" formControlName="nombre">
+    </div>
+    <div class="form-group">
+      <label>Apellido:</label>
+      <input type="text" class="form-control" formControlName="apellido">
+    </div>
+    <div class="form-group">
+      <label>Teléfono:</label>
+      <input type="text" class="form-control" formControlName="telefono">
+    </div>
+    <button type="submit" class="btn btn-primary">Agregar Empleado</button>
+  </form>
+</div>
 
 <app-lista-empleados></app-lista-empleados>
