add button clean form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,8 @@
       <label>Teléfono:</label>
       <input type="text" class="form-control" formControlName="telefono">
     </div>
-    <button type="submit" class="btn btn-primary">Agregar Empleado</button>
+    <button type="submit" class="btn btn-primary">Agregar Empleado</button> <br>
+    <button type="button" class="btn btn-secondary" (click)="limpiarFormulario()">Limpiar</button>
   </form>
 </div>
 
